test/samples/ec2/DescribeSecurityGroups.json
[
 {
  "Description": "default VPC security group",
  "GroupId": "sg-07163883f8edb94e4",
  "GroupName": "default",
  "IpPermissions": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": null,
      "GroupId": "sg-07163883f8edb94e4",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": null,
  "VpcId": "vpc-098b48917ef5e624f"
 },
 {
  "Description": "EKS cluster security group.",
  "GroupId": "sg-0a4ef039b3d8d74ca",
  "GroupName": "terraform-cluster-cluster-20230808013319057600000007",
  "IpPermissions": [
   {
    "FromPort": 443,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 443,
    "UserIdGroupPairs": [
     {
      "Description": "Node groups to cluster API",
      "GroupId": "sg-0ffe4b9f0bcc633c6",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "Name",
    "Value": "terraform-cluster-cluster"
   },
   {
    "Key": "k8s.io/cluster-autoscaler/terraform-cluster",
    "Value": "owned"
   },
   {
    "Key": "k8s.io/cluster-autoscaler/enabled",
    "Value": "true"
   }
  ],
  "VpcId": "vpc-0788b7737b410da9a"
 },
 {
  "Description": "Communication between the control plane and worker nodegroups",
  "GroupId": "sg-02558e27890f26d41",
  "GroupName": "eksctl-eks-test-cluster-ControlPlaneSecurityGroup-1WECYG6XFQHPJ",
  "IpPermissions": [],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "eksctl.cluster.k8s.io/v1alpha1/cluster-name",
    "Value": "eks-test"
   },
   {
    "Key": "Name",
    "Value": "eksctl-eks-test-cluster/ControlPlaneSecurityGroup"
   },
   {
    "Key": "alpha.eksctl.io/cluster-name",
    "Value": "eks-test"
   },
   {
    "Key": "aws:cloudformation:stack-id",
    "Value": "arn:aws:cloudformation:us-east-2:000000000000:stack/eksctl-eks-test-cluster/859561d0-1003-11ee-b706-0a928a772ff5"
   },
   {
    "Key": "alpha.eksctl.io/eksctl-version",
    "Value": "0.144.0"
   },
   {
    "Key": "aws:cloudformation:stack-name",
    "Value": "eksctl-eks-test-cluster"
   },
   {
    "Key": "alpha.eksctl.io/cluster-oidc-enabled",
    "Value": "false"
   },
   {
    "Key": "aws:cloudformation:logical-id",
    "Value": "ControlPlaneSecurityGroup"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
  "GroupId": "sg-08ec9ed48719f0272",
  "GroupName": "eks-cluster-sg-AWSTest-128188687",
  "IpPermissions": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": null,
      "GroupId": "sg-08ec9ed48719f0272",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 3000,
    "UserIdGroupPairs": [
     {
      "Description": "elbv2.k8s.aws/targetGroupBinding=shared",
      "GroupId": "sg-08a67a01d79b31ef0",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "Name",
    "Value": "eks-cluster-sg-AWSTest-128188687"
   },
   {
    "Key": "kubernetes.io/cluster/AWSTest",
    "Value": "owned"
   },
   {
    "Key": "aws:eks:cluster-name",
    "Value": "AWSTest"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "[k8s] Managed SecurityGroup for LoadBalancer",
  "GroupId": "sg-08bedffaff9ac878f",
  "GroupName": "k8s-game2048-ingress2-24f58fb262",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": ""
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "ingress.k8s.aws/stack",
    "Value": "game-2048/ingress-2048"
   },
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "terraform-cluster"
   },
   {
    "Key": "ingress.k8s.aws/resource",
    "Value": "ManagedLBSecurityGroup"
   }
  ],
  "VpcId": "vpc-0788b7737b410da9a"
 },
 {
  "Description": "My EFS security group",
  "GroupId": "sg-0e30fd7fd4438cf82",
  "GroupName": "MyEfsSecurityGroup",
  "IpPermissions": [
   {
    "FromPort": 2049,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/16",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 2049,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": null,
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "Communication between all nodes in the cluster",
  "GroupId": "sg-02d4b7f72861d1a3d",
  "GroupName": "eksctl-eks-test-cluster-ClusterSharedNodeSecurityGroup-ZOOVDXRE5D57",
  "IpPermissions": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": "Allow nodes to communicate with each other (all ports)",
      "GroupId": "sg-02d4b7f72861d1a3d",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     },
     {
      "Description": "Allow managed and unmanaged nodes to communicate with each other (all ports)",
      "GroupId": "sg-04ec63097fd8509a7",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "Name",
    "Value": "eksctl-eks-test-cluster/ClusterSharedNodeSecurityGroup"
   },
   {
    "Key": "alpha.eksctl.io/eksctl-version",
    "Value": "0.144.0"
   },
   {
    "Key": "alpha.eksctl.io/cluster-oidc-enabled",
    "Value": "false"
   },
   {
    "Key": "aws:cloudformation:logical-id",
    "Value": "ClusterSharedNodeSecurityGroup"
   },
   {
    "Key": "aws:cloudformation:stack-id",
    "Value": "arn:aws:cloudformation:us-east-2:000000000000:stack/eksctl-eks-test-cluster/859561d0-1003-11ee-b706-0a928a772ff5"
   },
   {
    "Key": "alpha.eksctl.io/cluster-name",
    "Value": "eks-test"
   },
   {
    "Key": "eksctl.cluster.k8s.io/v1alpha1/cluster-name",
    "Value": "eks-test"
   },
   {
    "Key": "aws:cloudformation:stack-name",
    "Value": "eksctl-eks-test-cluster"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "[k8s] Shared Backend SecurityGroup for LoadBalancer",
  "GroupId": "sg-01fa9f27381ef255e",
  "GroupName": "k8s-traffic-terraformcluster-9c69b3dc35",
  "IpPermissions": [],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "elbv2.k8s.aws/resource",
    "Value": "backend-sg"
   },
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "terraform-cluster"
   }
  ],
  "VpcId": "vpc-0788b7737b410da9a"
 },
 {
  "Description": "default VPC security group",
  "GroupId": "sg-059a945370bab8ec3",
  "GroupName": "default",
  "IpPermissions": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": null,
      "GroupId": "sg-059a945370bab8ec3",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": null,
  "VpcId": "vpc-02a9b918570f4723a"
 },
 {
  "Description": "[k8s] Managed SecurityGroup for LoadBalancer",
  "GroupId": "sg-01998694755d25807",
  "GroupName": "k8s-albterraformclust-476c2104dd",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": ""
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "terraform-cluster"
   },
   {
    "Key": "ingress.k8s.aws/resource",
    "Value": "ManagedLBSecurityGroup"
   },
   {
    "Key": "ingress.k8s.aws/stack",
    "Value": "alb-terraform-cluster"
   }
  ],
  "VpcId": "vpc-0788b7737b410da9a"
 },
 {
  "Description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
  "GroupId": "sg-06b18bc912c5914eb",
  "GroupName": "eks-cluster-sg-terraform-cluster-2080591871",
  "IpPermissions": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": null,
      "GroupId": "sg-06b18bc912c5914eb",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "aws:eks:cluster-name",
    "Value": "terraform-cluster"
   },
   {
    "Key": "k8s.io/cluster-autoscaler/terraform-cluster",
    "Value": "owned"
   },
   {
    "Key": "Name",
    "Value": "eks-cluster-sg-terraform-cluster-2080591871"
   },
   {
    "Key": "k8s.io/cluster-autoscaler/enabled",
    "Value": "true"
   }
  ],
  "VpcId": "vpc-0788b7737b410da9a"
 },
 {
  "Description": "launch-wizard-1 created 2023-03-24T20:47:06.767Z",
  "GroupId": "sg-0331b460341800892",
  "GroupName": "launch-wizard-1",
  "IpPermissions": [
   {
    "FromPort": 22,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 22,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": null,
  "VpcId": "vpc-02a9b918570f4723a"
 },
 {
  "Description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
  "GroupId": "sg-0d043361daad26ef1",
  "GroupName": "eks-cluster-sg-eks-test-553701934",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": [
     {
      "Description": "elbv2.k8s.aws/targetGroupBinding=shared",
      "GroupId": "sg-09a2930d80083b0eb",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": null,
      "GroupId": "sg-0d043361daad26ef1",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "kubernetes.io/cluster/eks-test",
    "Value": "owned"
   },
   {
    "Key": "Name",
    "Value": "eks-cluster-sg-eks-test-553701934"
   },
   {
    "Key": "aws:eks:cluster-name",
    "Value": "eks-test"
   }
  ],
  "VpcId": "vpc-098b48917ef5e624f"
 },
 {
  "Description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
  "GroupId": "sg-04ec63097fd8509a7",
  "GroupName": "eks-cluster-sg-eks-test-553701934",
  "IpPermissions": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": "Allow unmanaged nodes to communicate with control plane (all ports)",
      "GroupId": "sg-02d4b7f72861d1a3d",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "aws:eks:cluster-name",
    "Value": "eks-test"
   },
   {
    "Key": "kubernetes.io/cluster/eks-test",
    "Value": "owned"
   },
   {
    "Key": "Name",
    "Value": "eks-cluster-sg-eks-test-553701934"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "launch-wizard-3 created 2023-04-21T19:58:55.698Z",
  "GroupId": "sg-03d1fbb9aa0ea2b5c",
  "GroupName": "launch-wizard-3",
  "IpPermissions": [
   {
    "FromPort": 22,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 22,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": null,
  "VpcId": "vpc-02a9b918570f4723a"
 },
 {
  "Description": "EKS node security group.",
  "GroupId": "sg-0ffe4b9f0bcc633c6",
  "GroupName": "terraform-cluster-node-20230808013319028500000006",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": [
     {
      "Description": "elbv2.k8s.aws/targetGroupBinding=shared",
      "GroupId": "sg-01fa9f27381ef255e",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 6443,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 6443,
    "UserIdGroupPairs": [
     {
      "Description": "Cluster API to node 6443/tcp webhook",
      "GroupId": "sg-0a4ef039b3d8d74ca",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 9443,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 9443,
    "UserIdGroupPairs": [
     {
      "Description": "Cluster API to node 9443/tcp webhook",
      "GroupId": "sg-0a4ef039b3d8d74ca",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 1025,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 65535,
    "UserIdGroupPairs": [
     {
      "Description": "Node to node ingress on ephemeral ports",
      "GroupId": "sg-0ffe4b9f0bcc633c6",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 8443,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 8443,
    "UserIdGroupPairs": [
     {
      "Description": "Cluster API to node 8443/tcp webhook",
      "GroupId": "sg-0a4ef039b3d8d74ca",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 10250,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 10250,
    "UserIdGroupPairs": [
     {
      "Description": "Cluster API to node kubelets",
      "GroupId": "sg-0a4ef039b3d8d74ca",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 53,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 53,
    "UserIdGroupPairs": [
     {
      "Description": "Node to node CoreDNS",
      "GroupId": "sg-0ffe4b9f0bcc633c6",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 53,
    "IpProtocol": "udp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 53,
    "UserIdGroupPairs": [
     {
      "Description": "Node to node CoreDNS UDP",
      "GroupId": "sg-0ffe4b9f0bcc633c6",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 443,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 443,
    "UserIdGroupPairs": [
     {
      "Description": "Cluster API to node groups",
      "GroupId": "sg-0a4ef039b3d8d74ca",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   },
   {
    "FromPort": 4443,
    "IpProtocol": "tcp",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 4443,
    "UserIdGroupPairs": [
     {
      "Description": "Cluster API to node 4443/tcp webhook",
      "GroupId": "sg-0a4ef039b3d8d74ca",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": "Allow all egress"
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "Name",
    "Value": "terraform-cluster-node"
   },
   {
    "Key": "kubernetes.io/cluster/terraform-cluster",
    "Value": "owned"
   },
   {
    "Key": "k8s.io/cluster-autoscaler/enabled",
    "Value": "true"
   },
   {
    "Key": "k8s.io/cluster-autoscaler/terraform-cluster",
    "Value": "owned"
   }
  ],
  "VpcId": "vpc-0788b7737b410da9a"
 },
 {
  "Description": "[k8s] Managed SecurityGroup for LoadBalancer",
  "GroupId": "sg-086c863e3cbeab83a",
  "GroupName": "k8s-ekssampl-ekssampl-c25b2170e2",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": ""
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "AWSTest"
   },
   {
    "Key": "ingress.k8s.aws/stack",
    "Value": "eks-sample-app/eks-sample-ingress"
   },
   {
    "Key": "ingress.k8s.aws/resource",
    "Value": "ManagedLBSecurityGroup"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "default VPC security group",
  "GroupId": "sg-000c99ec354978fd2",
  "GroupName": "default",
  "IpPermissions": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": [
     {
      "Description": null,
      "GroupId": "sg-000c99ec354978fd2",
      "GroupName": null,
      "PeeringStatus": null,
      "UserId": "000000000000",
      "VpcId": null,
      "VpcPeeringConnectionId": null
     }
    ]
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": null,
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "[k8s] Shared Backend SecurityGroup for LoadBalancer",
  "GroupId": "sg-09a2930d80083b0eb",
  "GroupName": "k8s-traffic-ekstest-d6c224aee1",
  "IpPermissions": [],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "eks-test"
   },
   {
    "Key": "elbv2.k8s.aws/resource",
    "Value": "backend-sg"
   }
  ],
  "VpcId": "vpc-098b48917ef5e624f"
 },
 {
  "Description": "[k8s] Managed SecurityGroup for LoadBalancer",
  "GroupId": "sg-08995d8e68a015404",
  "GroupName": "k8s-grafana-grafanai-63934656cd",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": ""
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "AWSTest"
   },
   {
    "Key": "ingress.k8s.aws/resource",
    "Value": "ManagedLBSecurityGroup"
   },
   {
    "Key": "ingress.k8s.aws/stack",
    "Value": "grafana/grafana-ingress"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "[k8s] Shared Backend SecurityGroup for LoadBalancer",
  "GroupId": "sg-08a67a01d79b31ef0",
  "GroupName": "k8s-traffic-AWSTest-f9eb351ee8",
  "IpPermissions": [],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "elbv2.k8s.aws/resource",
    "Value": "backend-sg"
   },
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "AWSTest"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "[k8s] Managed SecurityGroup for LoadBalancer",
  "GroupId": "sg-0cad172319d2304eb",
  "GroupName": "k8s-promethe-promethe-57552ab96d",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": ""
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "ingress.k8s.aws/stack",
    "Value": "prometheus/prometheus-ingress"
   },
   {
    "Key": "ingress.k8s.aws/resource",
    "Value": "ManagedLBSecurityGroup"
   },
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "AWSTest"
   }
  ],
  "VpcId": "vpc-0059e8ce324924fe5"
 },
 {
  "Description": "default VPC security group",
  "GroupId": "sg-00d9a5348a805ac2f",
  "GroupName": "default",
  "IpPermissions": [],
  "IpPermissionsEgress": [],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "Name",
    "Value": "vpc-terraform-cluster-default"
   }
  ],
  "VpcId": "vpc-0788b7737b410da9a"
 },
 {
  "Description": "launch-wizard-2 created 2023-04-20T14:44:27.796Z",
  "GroupId": "sg-0d2028b4eb2e84693",
  "GroupName": "launch-wizard-2",
  "IpPermissions": [
   {
    "FromPort": 22,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 22,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": null,
  "VpcId": "vpc-02a9b918570f4723a"
 },
 {
  "Description": "[k8s] Managed SecurityGroup for LoadBalancer",
  "GroupId": "sg-0b0ba790e0f782c0e",
  "GroupName": "k8s-ekstestcustomer-a053cd5d05",
  "IpPermissions": [
   {
    "FromPort": 80,
    "IpProtocol": "tcp",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": ""
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": 80,
    "UserIdGroupPairs": []
   }
  ],
  "IpPermissionsEgress": [
   {
    "FromPort": null,
    "IpProtocol": "-1",
    "IpRanges": [
     {
      "CidrIp": "1.1.1.1/0",
      "Description": null
     }
    ],
    "Ipv6Ranges": [],
    "PrefixListIds": [],
    "ToPort": null,
    "UserIdGroupPairs": []
   }
  ],
  "OwnerId": "000000000000",
  "Tags": [
   {
    "Key": "elbv2.k8s.aws/cluster",
    "Value": "eks-test"
   },
   {
    "Key": "ingress.k8s.aws/stack",
    "Value": "eks-test-customer"
   },
   {
    "Key": "ingress.k8s.aws/resource",
    "Value": "ManagedLBSecurityGroup"
   }
  ],
  "VpcId": "vpc-098b48917ef5e624f"
 }
]
